--- a/back-end/composer.json
+++ b/back-end/composer.json
@@ -9,7 +9,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
-        "laravel/sanctum": "^2.15",
+        "laravel/sanctum": "2.12",
         "laravel/tinker": "^2.5",
         "pragmarx/google2fa-laravel": "^2.2",
         "srmklive/paypal": "^3.0",
@@ -18,6 +18,7 @@
     "require-dev": {
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
+        "laravel-lang/lang": "8.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^5.10",
