--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@iconify-icons/mdi": "^1.2.48",
     "@iconify/react": "^5.0.2",
     "@shadcn/ui": "^0.0.4",
     "@testing-library/jest-dom": "^5.17.0",
@@ -19,9 +20,10 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.14.0",
+    "swiper": "^11.1.14",
     "v0": "^2.2.5",
     "web-vitals": "^2.1.4"
   },
