--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,7 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
     "moment": "^2.30.1",
+    "mysql2": "^3.11.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-data-table-component": "^7.6.2",
