--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "lucide-react": "^0.454.0",
     "moment": "^2.30.1",
     "mysql2": "^3.11.3",
     "react": "^18.3.1",
